# quincunx

./: Cargo.toml  Makefile  README.md
src/: main.rs  world.rs
static/: index.html
