[package]
name = "quincunx"
version = "0.1.0"
authors = ["Boris Tatarintsev <btatarintsev@ozon.ru>"]
edition = "2018"

[dependencies]
nalgebra = "0.21"
kiss3d = { version = "0.24", features = [ "conrod" ] }
stdweb = "0.4"
rand = { version = "0.6", features = [ "stdweb" ] }
ncollide2d = "0.22"
nphysics2d = "0.14"
