[package]
name = "quincunx"
version = "0.1.0"
authors = ["risboo6909 <ttyv00@gmail.com>"]
edition = "2018"

[dependencies]
# nalgebra = "0.21"
# ncollide2d = "0.23"
#nphysics2d = "0.13"
kiss3d = "0.24"
stdweb = "0.4"
nalgebra = "0.21"
ncollide3d = "0.23"
nphysics3d = "0.15"
rand = { version = "0.6", features = [ "stdweb" ] }
